# machine-api-ci-helper

./: .gitignore  Dockerfile  Pipfile  README.md  csr_decoder.py  main.py  requirements.txt  setup.cfg
machine_api_ci_helper/: main.py  main_template.py  mao.py  mao_template.py  output_template.py  processor.py  todo.py  types.py
machine_api_ci_helper/templates/: main.py  mao_template.py  todo_template.py
