[metadata]
name = machine-api-ci-helper
summary = machine-api-ci-helper
description-file =
    README.md
author = Michael Gugino
author-email = mgugino@redhat.com
home-page = https://github.com/michaelgugino/machine-api-ci-helper
classifier =
    Environment :: OpenShift
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    machine_api_ci_helper

[entry_points]
console_scripts =
    mapi-ci-helper = machine_api_ci_helper.main:main
